@@ -62,6 +62,11 @@ option.
 
 ** Sparse files are now read and written with larger blocksizes.
 
+** When extracting, tar no longer creates empty placeholder files
+   that are later replaced by symbolic links.  The placeholders are no
+   longer needed now that tar no longer follows symbolic links to
+   targets outside the working directory.
+
 
 version 1.35 - Sergey Poznyakoff, 2023-07-18
 
